--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 websockets/testBot.js
 websockets/node_modules/
 websockets/package-lock.json
+websockets/testBot.js
+websockets/testManager.js
+websockets/testStartGame.js
