--- a/websockets/package.json
+++ b/websockets/package.json
@@ -7,9 +7,14 @@
   "scripts": {
     "dev": "node --watch index.js",
     "start": "node index.js",
-    "test": "node test-bisca.js",
+    "test": "node tests/test-bisca.js",
     "test:bot": "node tests/testBot.js",
-    "test:integration": "node tests/integration-test.js"
+    "test:integration": "node tests/integration-test.js",
+    "test:cards": "node tests/test-card-distribution.js",
+    "test:errors": "node tests/test-error-protection.js",
+    "test:quick": "node tests/test-quick.js",
+    "test:bot-confirm": "node tests/test-bot-confirmation.js",
+    "test:all": "npm run test && npm run test:cards && npm run test:errors && npm run test:quick"
   },
   "dependencies": {
     "socket.io": "^4.8.1"
