Added some snipets and put the game working
precisamos de fazer o frontend para ver as respostas do outro player neste caso o bot

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ websockets/node_modules/
 websockets/package-lock.json
 code.zip
 code/
+frontend_web/node_modules/
+frontend_web/package-lock.json
 
 # Android
 android/.gradle/
