--- a/frontend_web/package.json
+++ b/frontend_web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "vue": "^3.4.0",
     "vue-router": "^4.2.5",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
