--- a/websockets/package.json
+++ b/websockets/package.json
@@ -1,33 +1,23 @@
 {
-  "name": "bisca-websockets",
+  "name": "websockets",
   "version": "1.0.0",
-  "type": "module",
-  "description": "WebSocket server for Bisca card game platform",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index.js",
-    "start": "node index.js",
-    "test": "node tests/test-bisca.js",
-    "test:bot": "node tests/testBot.js",
-    "test:integration": "node tests/integration-test.js",
-    "test:cards": "node tests/test-card-distribution.js",
-    "test:errors": "node tests/test-error-protection.js",
-    "test:quick": "node tests/test-quick.js",
-    "test:bot-confirm": "node tests/test-bot-confirmation.js",
-    "test:all": "npm run test && npm run test:cards && npm run test:errors && npm run test:quick"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "socket.io-client": "^4.8.1"
-  },
-  "keywords": [
-    "websocket",
-    "socket.io",
-    "card-game",
-    "bisca"
-  ],
-  "author": "TAES2025_G3_DDV",
-  "license": "ISC"
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "nodemon": "^3.1.11"
+  }
 }
