Refactor WebSocket handlers and add multiplayer game route
Moved WebSocket connection handlers to a new events/connections.js file and split game/user state logic into state/connections.js. Renamed SinglePlayer.js to Game.js for broader use. Updated frontend to add a multiplayer game page and route, and adjusted navigation and home page logic to support multiplayer. Added ESLint config for websockets, updated package.json scripts and devDependencies, and removed obsolete files.

--- a/websockets/package.json
+++ b/websockets/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "WebSocket server for Bisca card game platform",
-  "main": "index.js",
+  "main": "nodemon index.js",
   "scripts": {
     "dev": "node --watch index.js",
     "start": "node index.js",
@@ -20,6 +20,10 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "nodemon": "^3.1.11",
     "socket.io-client": "^4.8.1"
   },
   "keywords": [
