Refactor GameController and improve frontend game UX
Refactored GameController.php to simplify methods, reduce code duplication, and streamline game creation and finishing logic. Updated SinglePlayerGamePage.vue to enhance result popup logic, improve round/match handling, and clarify UI/UX for single player games. Improved auth store to provide a reactive token for socket connections and ensured token synchronization on login/logout. Refined socket connection handling in App.vue for better reactivity and user experience. Minor code cleanups and state management improvements in biscaStore.js.

--- a/websockets/package.json
+++ b/websockets/package.json
@@ -12,7 +12,7 @@
     "test:integration": "node tests/integration-test.js",
     "test:cards": "node tests/test-card-distribution.js",
     "test:errors": "node tests/test-error-protection.js",
-    "test:quick": "node tests/test-quick.js",
+    "test:quick": "npm run test:connections",
     "test:bot-confirm": "node tests/test-bot-confirmation.js",
     "test:all": "npm run test && npm run test:cards && npm run test:errors && npm run test:quick",
     "test:connections": "node tests/test-connections.js",
@@ -26,11 +26,11 @@
     "test:suite:coverage": "node tests/test-suite.js --coverage",
     "test:unit": "npm run test:connections && npm run test:game-state && npm run test:bisca-logic",
     "test:full": "npm run test:suite",
-    "test:quick": "npm run test:connections",
     "test:complete": "npm run test && echo '' && echo '📊 EXECUTANDO SUITE COMPLETA (incluindo integração)...' && npm run test:integration-full",
     "test:help": "echo 'COMANDOS DE TESTE DISPONÍVEIS:' && echo '• npm test                  - Executa todos os testes funcionais' && echo '• npm run test:unit         - Apenas testes unitários básicos' && echo '• npm run test:quick        - Teste rápido (apenas conexões)' && echo '• npm run test:complete     - Todos os testes incluindo integração' && echo '• npm run test:suite        - Suite completa com relatório' && echo '• npm run test:connections  - Testes de conexões' && echo '• npm run test:game-state   - Testes de estado do jogo' && echo '• npm run test:bisca-logic  - Testes da lógica da Bisca' && echo '• npm run test:websockets   - Testes de eventos WebSocket' && echo '• npm run test:capote       - Testes de pontuação especial' && echo '• npm run test:integration-full - Testes de integração'"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
