--- a/websockets/package.json
+++ b/websockets/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node --watch index.js",
     "start": "node index.js",
-    "test": "echo '🧪 EXECUTANDO TODOS OS TESTES FUNCIONAIS DO SISTEMA WEBSOCKET' && echo '========================================================' && npm run test:unit && npm run test:websockets && npm run test:capote && echo '' && echo '🎉 TODOS OS TESTES FUNCIONAIS CONCLUÍDOS! ✅'",
+    "test": "echo '🧪 EXECUTANDO TODOS OS TESTES FUNCIONAIS DO SISTEMA WEBSOCKET' && echo '========================================================' && npm run test:unit && npm run test:websockets && npm run test:capote && npm run test:practice && echo '' && echo '🎉 TODOS OS TESTES FUNCIONAIS CONCLUÍDOS! ✅'",
     "test:bot": "node tests/testBot.js",
     "test:integration": "node tests/integration-test.js",
     "test:cards": "node tests/test-card-distribution.js",
@@ -27,7 +27,10 @@
     "test:unit": "npm run test:connections && npm run test:game-state && npm run test:bisca-logic",
     "test:full": "npm run test:suite",
     "test:complete": "npm run test && echo '' && echo '📊 EXECUTANDO SUITE COMPLETA (incluindo integração)...' && npm run test:integration-full",
-    "test:help": "echo 'COMANDOS DE TESTE DISPONÍVEIS:' && echo '• npm test                  - Executa todos os testes funcionais' && echo '• npm run test:unit         - Apenas testes unitários básicos' && echo '• npm run test:quick        - Teste rápido (apenas conexões)' && echo '• npm run test:complete     - Todos os testes incluindo integração' && echo '• npm run test:suite        - Suite completa com relatório' && echo '• npm run test:connections  - Testes de conexões' && echo '• npm run test:game-state   - Testes de estado do jogo' && echo '• npm run test:bisca-logic  - Testes da lógica da Bisca' && echo '• npm run test:websockets   - Testes de eventos WebSocket' && echo '• npm run test:capote       - Testes de pontuação especial' && echo '• npm run test:integration-full - Testes de integração'"
+    "test:practice": "node tests/test-practice-mode.js",
+    "test:practice:integration": "node tests/test-practice-integration.js",
+    "test:practice:all": "node tests/run-practice-tests.js",
+    "test:help": "echo 'COMANDOS DE TESTE DISPONÍVEIS:' && echo '• npm test                  - Executa todos os testes funcionais' && echo '• npm run test:unit         - Apenas testes unitários básicos' && echo '• npm run test:quick        - Teste rápido (apenas conexões)' && echo '• npm run test:complete     - Todos os testes incluindo integração' && echo '• npm run test:suite        - Suite completa com relatório' && echo '• npm run test:connections  - Testes de conexões' && echo '• npm run test:game-state   - Testes de estado do jogo' && echo '• npm run test:bisca-logic  - Testes da lógica da Bisca' && echo '• npm run test:websockets   - Testes de eventos WebSocket' && echo '• npm run test:capote       - Testes de pontuação especial' && echo '• npm run test:integration-full - Testes de integração' && echo '• npm run test:practice     - Testes unitários practice mode' && echo '• npm run test:practice:integration - Testes integração practice' && echo '• npm run test:practice:all - Suite completa practice mode'"
   },
   "dependencies": {
     "axios": "^1.13.2",
