--- a/api/.env.example
+++ b/api/.env.example
@@ -8,6 +8,8 @@ APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+SANCTUM_STATEFUL_DOMAINS=localhost:5173
+
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
